<resources>
    <string name="app_name">Timing Lights</string>

    <string name="target">Target</string>
    <string name="matchplay">Matchplay</string>
    <string name="settings">Settings</string>

    <string name="equip_fail">Equipment Failure</string>
    <string name="emergency_stop">EMERGENCY STOP</string>

    <string name="start">Start</string>
    <string name="start_left">Start Left</string>
    <string name="start_right">Start Right</string>
    <string name="swap">Swap</string>
    <string name="score">Score</string>

    <string name="time">Seconds per end: </string>
    <string name="warning">Warning time (s): </string>
    <string name="detail">Detail: </string>
    <string name="none">None</string>
    <string name="ab">A/B</string>
    <string name="cd">C/D</string>
    <string name="reset_on_swap">Reset timer on swap</string>

    <string name="num_times_swap">Number of ends (per archer): </string>
    <string name="toggle_detail_option">Auto toggle detail between ends</string>
    <string name="unsaved_changes">Any unsaved changes will be lost, do you want to continue?</string>
    <string name="saved">Settings saved</string>

    <string name="num_arrows">Number of arrows: </string>
    <string name="secs_per_arrow">Seconds per arrow: </string>
    <string name="cancel">Cancel</string>
</resources>