<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.target.TargetFragment" >

    <LinearLayout
        android:id="@+id/lights_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/top_detail_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_horizontal_margin"
                android:layout_marginTop="@dimen/half_vertical_margin"
                android:layout_marginEnd="@dimen/half_horizontal_margin"
                android:text="A"
                android:textSize="36sp"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="36sp"
                android:autoSizeMaxTextSize="50sp"
                android:autoSizeStepGranularity="2sp" />

            <TextView
                android:id="@+id/bottom_detail_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_horizontal_margin"
                android:layout_marginEnd="@dimen/half_horizontal_margin"
                android:layout_marginBottom="@dimen/half_vertical_margin"
                android:text="B"
                android:textSize="36sp"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="36sp"
                android:autoSizeMaxTextSize="50sp"
                android:autoSizeStepGranularity="2sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/seg_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:fontFamily="@font/orloj"
            android:gravity="center"
            android:paddingBottom="@dimen/large_vertical_margin"
            android:textAlignment="center"
            android:textSize="75sp"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="75sp"
            android:autoSizeMaxTextSize="96sp"
            android:autoSizeStepGranularity="2sp" />

        <LinearLayout
            android:id="@+id/colour_lights"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:id="@+id/red"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="@dimen/half_horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginEnd="@dimen/half_horizontal_margin"
                android:layout_marginBottom="@dimen/half_vertical_margin"
                android:background="@color/on_red_light" />

            <View
                android:id="@+id/amber"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="@dimen/half_horizontal_margin"
                android:layout_marginEnd="@dimen/half_horizontal_margin"
                android:layout_marginBottom="@dimen/half_vertical_margin"
                android:background="@color/off_light" />

            <View
                android:id="@+id/green"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="@dimen/half_horizontal_margin"
                android:layout_marginEnd="@dimen/half_horizontal_margin"
                android:layout_marginBottom="@dimen/vertical_margin"
                android:background="@color/off_light" />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/control_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lights_section">

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/half_horizontal_margin"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:paddingVertical="@dimen/half_vertical_margin"
            android:layout_weight="1"
            android:text="@string/start"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/score_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:paddingVertical="@dimen/half_vertical_margin"
            android:layout_weight="1"
            android:text="@string/score"
            android:textAllCaps="false" />
    </LinearLayout>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/control_buttons" />

    <LinearLayout
        android:id="@+id/target_settings_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/control_buttons">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/half_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/max_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_margin"
                android:text="@string/time"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/max_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/warn_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_margin"
                android:text="@string/warning"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/warn_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/detail_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/half_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/detail"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/radio_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/none" />

            <RadioButton
                android:id="@+id/radio_ab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ab" />

            <RadioButton
                android:id="@+id/radio_cd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cd" />
        </RadioGroup>

    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/target_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/target_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/equip_fail_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/half_vertical_margin"
                android:paddingVertical="@dimen/half_vertical_margin"
                android:text="@string/equip_fail"
                android:textAllCaps="false" />

            <io.github.igneel32.remote.ui.SwipeButton
                android:id="@+id/emergency_stop_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>